# sysu_playDrone_ws

./: .gitignore  README.md  setup.sh  test_speed.bag
src/: uav_base_control.launch.sh
src/Onboard-SDK-ROS/dji_sdk_demo/: CMakeLists.txt
src/Onboard-SDK-ROS/dji_sdk_demo/include/dji_sdk_demo/: demo_flight_control.h
src/Onboard-SDK-ROS/dji_sdk_demo/src/: demo_flight_control.cpp
src/cloud_server_communication/: CMakeLists.txt  package.xml
src/cloud_server_communication/include/cloud_server_communication/: config.h  delay.pb.cc  delay.pb.h  delay.proto  test.pb.cc
src/cloud_server_communication/launch/: client.launch  cloudServer.launch  groundStation.launch  groundsub.launch  test.launch
src/cloud_server_communication/src/: .subscribeGround.cpp.swp  client2ground.cpp  cloudServer.cpp  cloudServerMultithread.cpp  delayClient.cpp  groundStationClient.cpp  statusUpdate.cpp  subscribe.cpp  subscribeGround.cpp
src/cloud_server_communication/src_back/: .cloudServer.cpp.swp  cloudServer.cpp  cloudServerMultithread.cpp  delayClient.cpp  groundStationClient.cpp  statusUpdate.cpp  subscribe.cpp
src/distributed_communication/: CMakeLists.txt  README.md  package.xml
src/distributed_communication/include/distributed_communication/: config.h
src/distributed_communication/launch/: communication_GCS.launch  communication_UAV.launch  test.launch
src/distributed_communication/src/: GCS_command_publisher.cpp  GCS_command_subscriber.cpp  UAV_status_publisher.cpp  UAV_status_subscriber.cpp  test_data_generator.cpp
src/ground_control_station/: CMakeLists.txt  README.md  package.xml  plugin_description.xml
src/ground_control_station/include/: CommandParser.h  DjiController.h  GroundControlStation(back).h  GroundControlStation.cpp  GroundControlStation.h  GroundStation2.h  HectorQuadrotor.h  UavGroup.h  UavStatusUpdate(back).h  UavStatusUpdate.cpp  UavStatusUpdate.h  UavVisualization.cpp  UavVisualization.h  uav_visualization.h
src/ground_control_station/launch/: abc.launch  command_parser.launch  empty_world.launch  ground_control.launch  ground_control_station.launch  simulation_control_station.launch  spawn_controller.launch  uav_status_update.launch  uav_visualization.launch
src/ground_control_station/msg/: Array3.msg  Status.msg  StatusArray.msg  StatusArrayNew.msg  StatusNew.msg  VisualStatus.msg  VisualStatusArray.msg
src/ground_control_station/rviz/: 8UAV_visualization.rviz
src/ground_control_station/scripts/: agent.py  caculation.py  codetest.py  echo_vel.py  environment.py  evader.py  fiftyPSO_8test.py  fifty_48AR_sim.py~  fifty_48AR_sim_old.py  fifty_48test_rt.py  fifty_8test.py  fifty_8test_rt.py  fifty_round_up.py  forward_flight.py  keyboard_control.py  keyboard_control_hector.py  relay.py  simulation_round_up.py  test.py  u_flight.py
src/ground_control_station/src/: command_parser.cpp  ground_control_station.cpp  ground_station2.cpp  simulation_control_station.cpp  simulation_position_fusion.cpp  uav_status_update.cpp
src/ground_control_station2/: CMakeLists.txt  package.xml
src/ground_control_station2/include/: GroundStation2.h
src/ground_control_station2/src/: ground_station2.cpp
src/one_button_takes_off/: CMakeLists.txt  package.xml
src/one_button_takes_off/include/: CommandParser.h  DjiController.h
src/one_button_takes_off/launch/: command_parser.launch
src/one_button_takes_off/scripts/: keyboard_control.py  simulation_round_up.py~
src/one_button_takes_off/src/: command_parser.cpp
