<?xml version="1.0"?>
<package format="2">
  <name>ground_control_station</name>
  <version>0.0.0</version>
  <description>The ground_control_station package</description>

  <!-- One maintainer tag required, multiple allowed, one person per tag -->
  <!-- Example:  -->
  <!-- <maintainer email="jane.doe@example.com">Jane Doe</maintainer> -->
  <maintainer email="dcr@todo.todo">dcr</maintainer>


  <!-- One license tag required, multiple allowed, one license per tag -->
  <!-- Commonly used license strings: -->
  <!--   BSD, MIT, Boost Software License, GPLv2, GPLv3, LGPLv2.1, LGPLv3 -->
  <license>TODO</license>




  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <build_export_depend>roscpp</build_export_depend>
  <build_export_depend>rospy</build_export_depend>

  <exec_depend>roscpp</exec_depend>
  <exec_depend>rospy</exec_depend>

  <build_depend>hector_uav_msgs</build_depend>
  <exec_depend>hector_uav_msgs</exec_depend>

  <build_depend>dji_sdk</build_depend>
  <exec_depend>dji_sdk</exec_depend>

  <build_depend>geometry_msgs</build_depend>
  <exec_depend>geometry_msgs</exec_depend>

  <build_depend>image_transport</build_depend>
  <exec_depend>image_transport</exec_depend>

  <build_depend>message_generation</build_depend>
  <exec_depend>message_runtime</exec_depend>

  <build_depend>rviz</build_depend>
  <build_export_depend>rviz</build_export_depend>
  <exec_depend>rviz</exec_depend>


  <export> <!--  添加plugin_description.xml -->
    <rviz plugin="${prefix}/plugin_description.xml"/>
  </export>
</package>
